--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -2,34 +2,10 @@
   line-height 1.5rem
 
 a, a.item
-  color #000080
+  color cyan
 
 .hidden
   display: none
-
-#logo
-  display: block
-  margin: 4rem
-
-@media only screen and (max-width: 1600px)
-  #logo
-    margin: 2rem 1rem
-
-#sidebar
-  padding 0 1rem
-
-  .menu
-    width: auto
-
-  a.item
-    font-size: 1.2rem;
-    text-align: center
-
-#container
-  margin-top: 50px;
-
-  h2
-    margin-bottom: 50px
 
 #wrapper
   position absolute
@@ -41,4 +17,3 @@ canvas
   width 100%
   height 100%
   z-index -1
-  opacity 0.5
