Adding new shader for new site

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,7 +7,7 @@ block append styles
   link(href='./dist/home.css', rel='stylesheet')
 
 block append title
-  | Home | Open Studios
+  | Open Studios | 
 
 block append page
   h2.ui.inverted.header New website coming soon.
