--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -5,12 +5,9 @@ html
       block title
     base(href='/')
     meta(name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0')
-    link(href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css', rel='stylesheet')
-    link(href='./dist/styles.css', rel='stylesheet')
+    link(href='./main.css', rel='stylesheet')
     block styles
   body
     #wrapper
-      .ui.container
-        .ui.basic.center.aligned.segment
-          block page
-    include /src/templates/scripts.pug
+      block page
+    include ./scripts.pug
