Adding icons for subsites and socials

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,4 +4,44 @@ block append title
   | Open Studios | 
 
 block append page
-  h1 new content
+  h1
+    img(src="/assets/logo.png")
+    span.hidden Open Studios
+  h2 open minded
+  ul
+    li
+      h3
+        a(href="#") Garrett Ray Jewellery
+    li
+      h3
+        a(href="#") Kamigen
+    li
+      h3
+        a(href="#") Paul Brzeski
+  .featured
+    a(href="#")
+      img(src="/assets/vogueuk23febcover.png")
+    h3
+      a(href="#") Studio Roundup for January 2023
+    p.
+      This is an exciting year for Open Studios — a lot of hard work and setup is now starting to pay off as we enter our fourth year of operation.
+  .socials
+    ul
+      li
+        a(href="#")
+          img(src="/assets/icons/facebook.png")
+      li
+        a(href="#")
+          img(src="/assets/icons/linkedin.png")
+      li
+        a(href="#")
+          img(src="/assets/icons/medium.png")
+      li
+        a(href="#")
+          img(src="/assets/icons/redbubble.png")
+      li
+        a(href="#")
+          img(src="/assets/icons/youtube.png")
+  .media
+    h3 Latest media
+    //- @todo Add youtube embeds
