--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,44 +4,61 @@ block append title
   | Open Studios | 
 
 block append page
-  h1
-    img(src="/assets/logo.png")
-    span.hidden Open Studios
-  h2 open minded
-  ul
-    li
-      h3
-        a(href="#") Garrett Ray Jewellery
-    li
-      h3
-        a(href="#") Kamigen
-    li
-      h3
-        a(href="#") Paul Brzeski
-  .featured
-    a(href="#")
-      img(src="/assets/vogueuk23febcover.png")
-    h3
-      a(href="#") Studio Roundup for January 2023
-    p.
-      This is an exciting year for Open Studios — a lot of hard work and setup is now starting to pay off as we enter our fourth year of operation.
-  .socials
-    ul
-      li
+  #container
+    #left-sidebar
+      .sites
+        ul
+          li
+            a(href="#")
+              img(src="/assets/sites/garrettray.png")
+              span.hidden Garrett Ray Jewellery
+          li
+            a(href="#")
+              img(src="/assets/sites/kamigen.png")
+              span.hidden Kamigen
+          li
+            a(href="#")
+              img(src="/assets/sites/paulbrzeski.png")
+              span.hidden Paul Brzeski
+      .featured
         a(href="#")
-          img(src="/assets/icons/facebook.png")
-      li
-        a(href="#")
-          img(src="/assets/icons/linkedin.png")
-      li
-        a(href="#")
-          img(src="/assets/icons/medium.png")
-      li
-        a(href="#")
-          img(src="/assets/icons/redbubble.png")
-      li
-        a(href="#")
-          img(src="/assets/icons/youtube.png")
-  .media
-    h3 Latest media
-    //- @todo Add youtube embeds
+          img(src="/assets/vogueuk23febcover.png")
+        h3
+          a(href="#") Studio Roundup for January 2023
+        p.
+          This is an exciting year for Open Studios — a lot of hard work and setup is now starting to pay off as we enter our fourth year of operation.
+    #main
+      h1
+        img(src="/assets/logo.png")
+        span.hidden Open Studios
+      h2 open minded
+    #right-sidebar
+      .socials
+        ul
+          li
+            a(href="#")
+              img(src="/assets/icons/facebook.png")
+          li
+            a(href="#")
+              img(src="/assets/icons/linkedin.png")
+          li
+            a(href="#")
+              img(src="/assets/icons/medium.png")
+          li
+            a(href="#")
+              img(src="/assets/icons/redbubble.png")
+          li
+            a(href="#")
+              img(src="/assets/icons/youtube.png")
+      .media
+        h3 Latest media
+        ul
+          li
+            //- Kamigen Animation Test 2
+            iframe(width="560" height="315" src="https://www.youtube.com/embed/VUzLwHIt_vM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
+          li
+            //- Introducing Garrett Ray Jewellery
+            iframe(width="560" height="315" src="https://www.youtube.com/embed/pnEoyGDhc80" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
+          li
+            //- Demonology Concept Reel
+            iframe(width="560" height="315" src="https://www.youtube.com/embed/QdaT9zFnhlw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
