--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -23,10 +23,11 @@ block append page
       .featured
         a(href="#")
           img(src="/assets/vogueuk23febcover.png")
-        h3
-          a(href="#") Studio Roundup for January 2023
-        p.
-          This is an exciting year for Open Studios — a lot of hard work and setup is now starting to pay off as we enter our fourth year of operation.
+        div
+          h3
+            a(href="#") Studio Roundup for January 2023
+          p.
+            This is an exciting year for Open Studios — a lot of hard work and setup is now starting to pay off as we enter our fourth year of operation.
     #main
       h1
         img(src="/assets/logo.png")
