--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,23 +9,23 @@ block append page
       .sites
         ul
           li
-            a(href="#")
+            a(href="https://grayjewellery.com.au/")
               img(src="/assets/sites/garrettray.png")
               span.hidden Garrett Ray Jewellery
           li
-            a(href="#")
+            a(href="https://kamigen.com/")
               img(src="/assets/sites/kamigen.png")
               span.hidden Kamigen
           li
-            a(href="#")
+            a(href="https://paulbrzeski.com/")
               img(src="/assets/sites/paulbrzeski.png")
               span.hidden Paul Brzeski
       .featured
-        a(href="#")
+        a(href="https://medium.com/@open_studios/studio-roundup-for-january-2023-117a63642348")
           img(src="/assets/vogueuk23febcover.png")
         div(class="drop-shadow")
           h3
-            a(href="#") Studio Roundup for January 2023
+            a(href="https://medium.com/@open_studios/studio-roundup-for-january-2023-117a63642348") Studio Roundup for January 2023
           p.
             This is an exciting year for Open Studios — a lot of hard work and setup is now starting to pay off as we enter our fourth year of operation.
     #main
@@ -50,19 +50,19 @@ block append page
       .socials
         ul
           li
-            a(href="#")
+            a(href="https://www.facebook.com/openstudiosco")
               img(src="/assets/icons/facebook.png" class="bg-white")
           li
-            a(href="#")
+            a(href="https://www.linkedin.com/company/open-studios-australia/")
               img(src="/assets/icons/linkedin.png" class="bg-white")
           li
-            a(href="#")
+            a(href="https://medium.com/@open_studios")
               img(src="/assets/icons/medium.png")
           li
-            a(href="#")
+            a(href="https://www.redbubble.com/people/openstudios/shop")
               img(src="/assets/icons/redbubble.png")
           li
-            a(href="#")
+            a(href="https://www.youtube.com/@open-studios")
               img(src="/assets/icons/youtube.png")
       h1.logo(class="block xl:hidden")
         img(src="/assets/logo.png" class="invert mb-20")
