--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,7 +1,7 @@
 extends ../templates/layout.pug
 
 block append title
-  | Open Studios | 
+  | Open Studios | Creative and technical production based out of Perth, Australia.
 
 block append page
   #container
