--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -51,7 +51,11 @@ h3 {
     }
 
     .featured {
-        @apply xl:self-end grid gap-4 justify-items-center text-white pb-20;
+        @apply xl:self-end grid gap-4 justify-items-center text-white pb-20 xl:pb-0;
+
+        .drop-shadow {
+            @apply px-4 md:px-20 xl:px-0;
+        }
 
         img {
             @apply mb-4;
