--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -21,13 +21,13 @@ block append page
               img(src="/assets/sites/paulbrzeski.png")
               span.hidden Paul Brzeski
       .featured
-        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-january-2023-117a63642348")
-          img(src="/assets/vogueuk23febcover.png")
+        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-february-2023-d1cfd8e801e")
+          img(src="/assets/vogueuk23marcover.png")
         div(class="drop-shadow")
           h3
-            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-january-2023-117a63642348") Studio Roundup for January 2023
+            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-february-2023-d1cfd8e801e") Studio Roundup for February 2023
           p.
-            This is an exciting year for Open Studios — a lot of hard work and setup is now starting to pay off as we enter our fourth year of operation.
+            Garrett Ray Jewellery is in the March issue of British Vogue! A sneak peek at Open Studios first ever cartoon character. Deep dive into a recent illustration by our art department and more.
     #main
       div(class="w-full")
         h1.logo
