Updating blog post to latest

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -21,13 +21,13 @@ block append page
               img(src="/assets/sites/paulbrzeski.png")
               span.hidden Paul Brzeski
       .featured
-        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-february-2023-d1cfd8e801e")
-          img(src="/assets/vogueuk23marcover.png")
+        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-march-2023-e93a1d240895")
+          img(src="/assets/vogueuk23aprcover.png")
         div(class="drop-shadow")
           h3
-            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-february-2023-d1cfd8e801e") Studio Roundup for February 2023
+            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-march-2023-e93a1d240895") Studio Roundup for March 2023
           p.
-            Garrett Ray Jewellery is in the March issue of British Vogue! A sneak peek at Open Studios first ever cartoon character. Deep dive into a recent illustration by our art department and more.
+            The character designs for Nerv and Arty are done! To celebrate this years March 27th Cherry Blossom Day we began promoting the Blossoms collection.
     #main
       div(class="w-full")
         h1.logo
