Made left hand column more responsive and better sized

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -33,7 +33,7 @@ block append page
         h1.logo
           img(src="/assets/logo.png")
           span.hidden Open Studios
-        h2 open minded
+        h2.page-title open minded
     #right-sidebar
       .media
         h3 Latest media
