--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -42,6 +42,11 @@ a:hover, a:focus
 
 #container {
     @apply px-8 py-12 xl:px-12 xl:py-16 min-h-fit;
+
+    @media (min-width: 1280px) and (max-height: 887px) {
+        @apply px-4 py-8;
+    }
+
 }
 
 #left-sidebar {
@@ -49,26 +54,47 @@ a:hover, a:focus
 
     .sites {
         @apply mb-20;
+        @media (min-width: 1280px) and (max-height: 887px) {
+            @apply mb-4 mx-auto;
+            max-width: 250px;
+        }
         ul {
             @apply grid xl:grid-cols-2 gap-8 justify-items-center;
         
             img {
                 height: auto;
                 width: 100%;
-                min-width: 80px; 
+                @media (min-width: 1536px) and (min-height: 768px) {
+                    min-width: 135px;
+                }
+
+                @media (min-width: 1280px) and (max-height: 887px) {
+                    max-width: 110px;
+                }
             }
         }
     }
 
     .featured {
-        @apply xl:self-end grid gap-4 justify-items-center text-white pb-20 2xl:pb-10;
+        @apply xl:items-end xl:self-end flex flex-col relative justify-items-center text-white;
+        @media (min-width: 1280px) and (max-height: 887px) {
+            @apply self-center items-center; 
+        }
 
         .drop-shadow {
-            @apply px-4 md:px-20 xl:px-0;
+            @apply mb-4 xl:mb-0 px-4 md:px-20 xl:px-0 xl:absolute xl:left-80 2xl:left-[420px] xl:bottom-10 xl:w-72;
+            @media (min-width: 1280px) and (max-height: 887px) {
+                @apply left-[360px]; 
+            }
         }
 
         img {
-            @apply mb-4;
+            @apply mb-4 xl:mb-0 mx-auto;
+            min-width: 250px;
+            @media (min-width: 1280px) and (max-height: 887px) {
+                margin: 0px;
+                max-width: 250px;
+            }
         }
     }
 }
@@ -81,13 +107,16 @@ h1.logo {
     }
 }
 
+h2.page-title {
+    font-size: 8rem;
+    @media xl {
+        @apply fixed inset-x-0 max-w-max mx-auto;
+    }
+    
+}
+
 #main {
     @apply xl:flex-1 order-1 xl:order-2 xl:w-auto xl:flex xl:place-items-center;
-
-    h1.logo {
-        @apply xl:absolute xl:left-0 xl:right-0 xl:top-[25%];
-        
-    }
 
     h2 {
         @apply place-self-center font-semibold my-20 text-center text-white text-8xl lg:text-9xl;
