--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -69,7 +69,7 @@ a:hover, a:focus
                 }
 
                 @media (min-width: 1280px) and (max-height: 887px) {
-                    max-width: 110px;
+                    max-width: 90px;
                 }
             }
         }
@@ -83,8 +83,12 @@ a:hover, a:focus
 
         .drop-shadow {
             @apply mb-4 xl:mb-0 px-4 md:px-20 xl:px-0 xl:absolute xl:left-80 2xl:left-[420px] xl:bottom-10 xl:w-72;
+
             @media (min-width: 1280px) and (max-height: 887px) {
-                @apply left-[360px]; 
+                @apply bottom-4 left-[300px] w-96; 
+            }
+            @media (min-width: 1536px) and (max-height: 887px) {
+                @apply bottom-4 left-[360px] w-96; 
             }
         }
 
@@ -129,6 +133,16 @@ h2.page-title {
     h3 {
         @apply mb-4;
         margin-left: 5%;
+        @media (min-width: 1280px) and (max-height: 887px) {
+            text-align: center;
+        }
+    }
+
+    .media ul {
+        @media (min-width: 1280px) and (max-height: 887px) {
+            max-width: 250px;
+            @apply mx-auto;
+        }
     }
 
     .media li {
@@ -151,15 +165,21 @@ h2.page-title {
 
 #right-sidebar .socials {
     @apply xl:self-end my-20 xl:my-0;
-}
-#right-sidebar .socials ul {
-    @apply grid grid-cols-5 gap-2 justify-items-center;
-}
 
-#right-sidebar .socials img {
-    height: auto;
-    width: 100%;
-    max-width: 80px;
+    @media (min-width: 1280px) and (max-height: 887px) {
+        max-width: 250px;
+        @apply mx-auto;
+    }
+
+    ul {
+        @apply grid grid-cols-5 gap-2 justify-items-center;
+    }
+
+    img {
+        height: auto;
+        width: 100%;
+        max-width: 80px;
+    }
 }
 
 @screen md {}
