--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -112,19 +112,17 @@ h1.logo {
 }
 
 h2.page-title {
-    font-size: 8rem;
+    @apply place-self-center font-semibold my-20 text-center text-white text-8xl lg:text-9xl;
     @media xl {
         @apply fixed inset-x-0 max-w-max mx-auto;
     }
-    
+    @media (min-width: 1280px) and (max-height: 887px) {
+        @apply mt-0 mb-10;
+    }
 }
 
 #main {
     @apply xl:flex-1 order-1 xl:order-2 xl:w-auto xl:flex xl:place-items-center;
-
-    h2 {
-        @apply place-self-center font-semibold my-20 text-center text-white text-8xl lg:text-9xl;
-    }
 }
 
 #right-sidebar {
