--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -80,6 +80,9 @@ a:hover, a:focus
         @media (min-width: 1280px) and (max-height: 887px) {
             @apply self-center items-center; 
         }
+        @media (min-width: 1536px) and (max-height: 1065px) {
+            @apply self-center items-center; 
+        }
 
         .drop-shadow {
             @apply mb-4 xl:mb-0 px-4 md:px-20 xl:px-0 xl:absolute xl:left-80 2xl:left-[420px] xl:bottom-10 xl:w-72;
@@ -88,7 +91,10 @@ a:hover, a:focus
                 @apply bottom-4 left-[300px] w-96; 
             }
             @media (min-width: 1536px) and (max-height: 887px) {
-                @apply bottom-4 left-[360px] w-96; 
+                @apply bottom-4 left-[360px] w-96;
+            }
+            @media (min-width: 1536px) and (max-height: 1065px) {
+                @apply bottom-8 left-[340px] w-96;
             }
         }
 
@@ -96,6 +102,10 @@ a:hover, a:focus
             @apply mb-4 xl:mb-0 mx-auto;
             min-width: 250px;
             @media (min-width: 1280px) and (max-height: 887px) {
+                margin: 0px;
+                max-width: 250px;
+            }
+            @media (min-width: 1536px) and (max-height: 1065px) {
                 margin: 0px;
                 max-width: 250px;
             }
@@ -108,6 +118,9 @@ h1.logo {
     img {
         @apply mx-auto;
         max-width: 240px;
+    }
+    @media (min-width: 1280px) and (max-height: 887px) {
+        @apply -mt-20;
     }
 }
 
