--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -21,13 +21,13 @@ block append page
               img(src="/assets/sites/paulbrzeski.png")
               span.hidden Paul Brzeski
       .featured
-        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-march-2023-e93a1d240895")
-          img(src="/assets/vogueuk23aprcover.png")
+        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-april-2023-aac0d9414760")
+          img(src="/assets/23-04-taurus.png")
         div(class="drop-shadow")
           h3
-            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-march-2023-e93a1d240895") Studio Roundup for March 2023
+            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-april-2023-aac0d9414760") Studio Roundup for April 2023
           p.
-            The character designs for Nerv and Arty are done! To celebrate this years March 27th Cherry Blossom Day we began promoting the Blossoms collection.
+            April 20th marks the start of Taurus. Preview of the latest pages from Kamigen.
     #main
       div(class="w-full")
         h1.logo
