Kicking off, stripping out existing site and adding a spinning cube

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,66 +4,5 @@ block append title
   | Open Studios | Creative and technical production based out of Perth, Australia.
 
 block append page
-  #container
-    #left-sidebar
-      .sites
-        ul
-          li
-            a(target="_blank" href="https://grayjewellery.com.au/")
-              img(src="/assets/sites/garrettray.png")
-              span.hidden Garrett Ray Jewellery
-          li
-            a(target="_blank" href="https://kamigen.com/")
-              img(src="/assets/sites/kamigen.png")
-              span.hidden Kamigen
-          li
-            a(target="_blank" href="https://paulbrzeski.com/")
-              img(src="/assets/sites/paulbrzeski.png")
-              span.hidden Paul Brzeski
-      .featured
-        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-april-2023-aac0d9414760")
-          img(src="/assets/23-04-taurus.png")
-        div(class="drop-shadow")
-          h3
-            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-april-2023-aac0d9414760") Studio Roundup for April 2023
-          p.
-            April 20th marks the start of Taurus. Preview of the latest pages from Kamigen.
-    #main
-      div(class="w-full")
-        h1.logo
-          img(src="/assets/logo.png")
-          span.hidden Open Studios
-        h2.page-title open minded
-    #right-sidebar
-      .media
-        h3 Latest media
-        ul
-          li
-            //- Kamigen Animation Test 2
-            iframe(width="560" height="315" src="https://www.youtube.com/embed/VUzLwHIt_vM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
-          li
-            //- Introducing Garrett Ray Jewellery
-            iframe(width="560" height="315" src="https://www.youtube.com/embed/pnEoyGDhc80" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
-          li
-            //- Demonology Concept Reel
-            iframe(width="560" height="315" src="https://www.youtube.com/embed/QdaT9zFnhlw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
-      .socials
-        ul
-          li
-            a(target="_blank" href="https://www.facebook.com/openstudiosco")
-              img(src="/assets/icons/facebook.png" class="bg-white")
-          li
-            a(target="_blank" href="https://www.linkedin.com/company/open-studios-australia/")
-              img(src="/assets/icons/linkedin.png" class="bg-white")
-          li
-            a(target="_blank" href="https://medium.com/@open_studios")
-              img(src="/assets/icons/medium.png")
-          li
-            a(target="_blank" href="https://www.redbubble.com/people/openstudios/shop")
-              img(src="/assets/icons/redbubble.png")
-          li
-            a(target="_blank" href="https://www.youtube.com/@open-studios")
-              img(src="/assets/icons/youtube.png")
-      h1.logo(class="block xl:hidden")
-        img(src="/assets/logo.png" class="invert mb-20")
-        span.hidden Open Studios
+  #container Hello!
+    
