Updating with latest blog article

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -21,13 +21,13 @@ block append page
               img(src="/assets/sites/paulbrzeski.png")
               span.hidden Paul Brzeski
       .featured
-        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-april-2023-aac0d9414760")
-          img(src="/assets/23-04-taurus.png")
+        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-may-2023-f47ecf49df9a")
+          img(src="/assets/gemini.png")
         div(class="drop-shadow")
           h3
-            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-april-2023-aac0d9414760") Studio Roundup for April 2023
+            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-may-2023-f47ecf49df9a") Studio Roundup for May 2023
           p.
-            April 20th marks the start of Taurus. Preview of the latest pages from Kamigen.
+            This month we worked continued pre-production of Demonology, launched new jewellery and took the first steps to rebranding.
     #main
       div(class="w-full")
         h1.logo
