--- a/src/templates/scripts.pug
+++ b/src/templates/scripts.pug
@@ -19,3 +19,22 @@ block scripts
     gtag('config', 'UA-155740430-1');
   script(defer src='/assets/alpine.js')
   script(src='/main.js')
+  script(async src="https://www.googletagmanager.com/gtag/js?id=G-SC2V3DB479")
+  script.
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SC2V3DB479');
+  script.
+    var _paq = window._paq = window._paq || [];
+    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function() {
+      var u="https://analytics.openstudios.xyz/";
+      _paq.push(['setTrackerUrl', u+'matomo.php']);
+      _paq.push(['setSiteId', '11']);
+      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+      g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+    })();
