--- a/pages/1999.css
+++ b/pages/1999.css
@@ -28,7 +28,7 @@ h1 {
   color: white;
   text-shadow: 2.5px 2.5px 5px #FF69CB;
   text-align: center;
-  font-size: 8rem;
+  font-size: 4rem;
   font-weight: 100;
   margin: 2vh 0;
   text-transform: lowercase;
@@ -107,7 +107,8 @@ p {
 .header img {
   background: rgb(0, 0, 0);
   background: radial-gradient(circle, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 60%);
-  width: auto;
+  height: auto;
+  max-width: 50vw;
 }
 
 .menu {
@@ -146,10 +147,9 @@ p {
 
 .content .row {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-basis: 100%;
   justify-content: space-between;
-  margin: 2rem;
 }
 
 .content .row.center {
@@ -171,6 +171,12 @@ p {
 
 
 @media screen and (min-width: 960px) {
+  .header img {
+    max-width: inherit;
+  }
+  h1 {
+    font-size: 8rem;
+  }
   #page-wrapper {
     align-items: center;
   }
@@ -180,6 +186,11 @@ p {
   .content,
   .footer {
     width: 100vw;
+  }
+
+  .content .row {
+    flex-direction: row;
+    margin: 2rem;
   }
 
   .menu li {
