New blog post, rounded corners, artstation

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -21,11 +21,11 @@ block append page
               img(src="/assets/sites/paulbrzeski.png")
               span.hidden Paul Brzeski
       .featured
-        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-may-2023-f47ecf49df9a")
-          img(src="/assets/gemini.png")
+        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-june-2023-9c2a50a300b4")
+          img(src="/assets/cancer.png")
         div(class="drop-shadow")
           h3
-            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-may-2023-f47ecf49df9a") Studio Roundup for May 2023
+            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-june-2023-9c2a50a300b4") Studio Roundup for June 2023
           p.
             This month we worked continued pre-production of Demonology, launched new jewellery and took the first steps to rebranding.
     #main
@@ -50,19 +50,22 @@ block append page
       .socials
         ul
           li
-            a(target="_blank" href="https://www.facebook.com/openstudiosco")
-              img(src="/assets/icons/facebook.png" class="bg-white")
+            a(target="_blank" href="https://www.artstation.com/openstudios" title="Check out our Artstation portfolio")
+              img(src="/assets/icons/artstation.png")
           li
-            a(target="_blank" href="https://www.linkedin.com/company/open-studios-australia/")
-              img(src="/assets/icons/linkedin.png" class="bg-white")
+            a(target="_blank" href="https://www.facebook.com/openstudiosco" title="Visit our Facebook page")
+              img(src="/assets/icons/facebook.png")
           li
-            a(target="_blank" href="https://medium.com/@open_studios")
+            a(target="_blank" href="https://www.linkedin.com/company/open-studios-australia/" title="Get in touch on LinkedIn")
+              img(src="/assets/icons/linkedin.png")
+          li
+            a(target="_blank" href="https://medium.com/@open_studios" title="Read our studio blog on Medium")
               img(src="/assets/icons/medium.png")
           li
-            a(target="_blank" href="https://www.redbubble.com/people/openstudios/shop")
+            a(target="_blank" href="https://www.redbubble.com/people/openstudios/shop" title="Shop for merch on RedBubble")
               img(src="/assets/icons/redbubble.png")
           li
-            a(target="_blank" href="https://www.youtube.com/@open-studios")
+            a(target="_blank" href="https://www.youtube.com/@open-studios" title="Watch our videos on Youtube")
               img(src="/assets/icons/youtube.png")
       h1.logo(class="block xl:hidden")
         img(src="/assets/logo.png" class="invert mb-20")
