--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -62,6 +62,8 @@ a:hover, a:focus
             @apply grid xl:grid-cols-2 gap-8 justify-items-center;
         
             img {
+                border-radius: 10px;
+                padding: 25px;
                 height: auto;
                 width: 100%;
                 @media (min-width: 1536px) and (max-height: 1065px) {
@@ -100,6 +102,7 @@ a:hover, a:focus
 
         img {
             @apply mb-4 xl:mb-0 mx-auto;
+            border-radius: 10px;
             min-width: 250px;
             @media (min-width: 1280px) and (max-height: 887px) {
                 margin: 0px;
@@ -164,10 +167,11 @@ h2.page-title {
         overflow: hidden;
     }
     .media li iframe {
+        border-radius: 10px;
         position: absolute;
         top: 0; bottom: 0; left: 0;
-        width: 100%;
-        height: 100%;
+        width: calc(100% - 20px);
+        height: calc(100% - 20px);
         border: 0;
     }
 }
@@ -182,13 +186,14 @@ h2.page-title {
     }
 
     ul {
-        @apply grid grid-cols-5 gap-2 justify-items-center;
+        @apply grid grid-cols-6 gap-2 justify-items-center;
     }
 
     img {
         height: auto;
         width: 100%;
         max-width: 80px;
+        border-radius: 10px;
     }
 }
 
