--- a/pages/1999.css
+++ b/pages/1999.css
@@ -36,13 +36,18 @@ a {
   opacity: 0.9;
 }
 
-.linkedin_profile img {
+.icon_button {
+  text-decoration: none;
+}
+
+.icon_button img {
   width: 1.1rem;
   height: auto;
   border-radius: 4px;
+  margin: 0 0.5rem 0 0;
 }
 
-.linkedin_profile img:hover {
+a.icon_button img:hover {
   background-color: #FFFFFF;
   box-shadow: 0px 0px 4px #FFFFFF;
 }
