--- a/pages/1999.css
+++ b/pages/1999.css
@@ -52,6 +52,24 @@ a.icon_button img:hover {
   box-shadow: 0px 0px 4px #FFFFFF;
 }
 
+.content a.service_button {
+  display: flex;
+  border-radius: 0.75rem;
+  border: solid 1px #FF69CB;
+  margin: 0 0.75rem;
+  width: calc(20% - 1.5rem);
+  padding: 1rem;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.content a.service_button:hover {
+  background: #0099AA;
+  color: #FFFFFF;
+}
+
 .contact_page .icon_button {
   display: flex;
   align-items: center;
@@ -71,6 +89,8 @@ h1 {
   font-weight: 100;
   margin: 2vh 0;
   text-transform: lowercase;
+  animation: fadeInOut 2s infinite alternate;
+  animation-delay: 0.5s;
 }
 
 h3 {
@@ -181,6 +201,16 @@ form input[type='submit']:hover {
   background: radial-gradient(circle, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 60%);
   height: auto;
   max-width: 50vw;
+  animation: fadeInOut 2s infinite alternate;
+}
+
+@keyframes fadeInOut {
+  0% {
+    filter: brightness(0.5);
+  }
+  100% {
+    filter: brightness(1.0);
+  }
 }
 
 .menu {
