Adding about us and services pages, fixing footer

--- a/src/templates/1999.pug
+++ b/src/templates/1999.pug
@@ -14,7 +14,7 @@ html
                     hr.line
                     hr.line
                 .h1
-                    a(href='#' title='Home')
+                    a(href='./home.html' title='Home')
                         img(src='./assets/images/logo-wide.png' alt='Logo')
                 .lineset.second
                     hr.line
@@ -35,3 +35,14 @@ html
                         li
                             a(href='./contact_us.html') Contact Us
             block page
+            .footer
+                .lineset.second
+                    hr.line
+                    hr.line
+                    hr.line
+                    hr.line
+                .lineset.first
+                    hr.line
+                    hr.line
+                    hr.line
+                    hr.line
