--- a/src/pages/loader.pug
+++ b/src/pages/loader.pug
@@ -33,10 +33,98 @@ head
             height: 5rem;
             width: 5rem;
         }
-canvas#loader_symbols Canvas is not supported in your browser.
-canvas#loader_image Canvas is not supported in your browser.
-h1
-    div Loading
-    img(src='/assets/images/tail-spin.svg')
-script
-    include ../templates/matrix.js
+    style.
+            body {
+                background-color: #000;
+                margin: 0;
+                padding: 0;
+            }
+            #pageOverlay,
+            #webgl {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                display: block;
+            }
+            #pageOverlay {
+                border: 0 none;
+                display: none;
+                z-index: 10000;
+            }
+            #exitSign {
+                background: black;
+                font-weight: bold;
+                color: #fff;
+                box-shadow: 0px 0px 5px 5px #00DD00;
+                text-shadow: 2.5px 2.5px 5px #999;
+                cursor: pointer;
+                display: none;
+                border: solid 1px #00DD00;
+                border-radius: 1rem;
+                padding: 1rem;
+                position: absolute;
+                top: 2rem;
+                right: 2rem;
+                z-index: 10001;
+            }
+            #exitSign img {
+                max-width: min(80px, 10vw);
+                height: auto;
+            }
+            #exitSign:hover {
+                box-shadow: 0px 0px 7.5px 7.5px #00FF00;
+                border-color: #00FF00;
+            }
+    script(type='importmap').
+        {
+            "imports": {
+                "three": "./vendor/three-0.153.0.module.min.js",
+                "three/addons/": "./vendor/addons-1.5.3/",
+                "three-mesh-bvh": "./vendor/three-mesh-bvh-0.5.24.module.js",
+                "three-bvh-csg": "./vendor/three-bvh-csg-0.0.4.module.js",
+                "virtual-office": "./virtual_office/main.js"
+            }
+        }
+body( onload = "_init()" )
+    canvas#loader_symbols Canvas is not supported in your browser.
+    canvas#loader_image Canvas is not supported in your browser.
+    h1
+        div Loading
+        img(src='/assets/images/tail-spin.svg')
+    include ../templates/door_image.pug
+    noscript
+        | This website requires Javascript for the full experience. As you don&apos;t have Javascript enabled, you are seeing
+        | the 1999 experience.
+    a#exitSign
+        img(src='./assets/exit.svg' title='Return to the office' width='300' height='85')
+    iframe#pageOverlay
+    #webgl
+    script(type='module' src='./virtual_office/app.js')
+    script#vertexshader(type='x-shader/x-vertex').
+        varying vec2 vUv;
+        void main() {
+            vUv = uv;
+            gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+        }
+    script#fragmentshader(type='x-shader/x-fragment').
+        // Kudos to https://github.com/mrdoob/three.js/issues/14104#issuecomment-1536582334
+        uniform sampler2D baseTexture;
+        uniform sampler2D bloomTexture;
+        varying vec2 vUv;
+        void main() {
+            vec4 base_color = texture2D(baseTexture, vUv);
+            vec4 bloom_color = texture2D(bloomTexture, vUv);
+            float lum = 0.21 * bloom_color.r + 0.71 * bloom_color.g + 0.07 * bloom_color.b;
+            gl_FragColor = vec4(base_color.rgb + bloom_color.rgb, max(base_color.a, lum));
+        }
+
+    script(src='./vendor/tweakpane-3.1.10.min.js')
+    script(src='./vendor/tween-21.0.0.umd.min.js')
+    script(async src='./vendor/es-module-shims-1.8.0.js')
+    
+    script
+        include ../scripts/scenograph.js
+    script
+        include ../scripts/matrix.js
