Clearing matrix scene interval and removing loading sign

--- a/src/pages/loader.pug
+++ b/src/pages/loader.pug
@@ -90,7 +90,7 @@ head
 body( onload = "_init()" )
     canvas#loader_symbols Canvas is not supported in your browser.
     canvas#loader_image Canvas is not supported in your browser.
-    h1
+    h1#loadingSign
         div Loading
         img(src='/assets/images/tail-spin.svg')
     include ../templates/door_image.pug
