--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -1,15 +1,9 @@
----
-permalink: "loader.html"
-dynamicPermalink: false
----
-
+doctype html
 head
     title HTML5 Canvas Matrix Effect
     style.
-        body {
-            margin: 0;
-        }
-        canvas {
+
+        #loader_symbols {
             display: block;
             position:absolute;
             top:0;
@@ -33,50 +27,50 @@ head
             height: 5rem;
             width: 5rem;
         }
-    style.
-            body {
-                background-color: #000;
-                margin: 0;
-                padding: 0;
-            }
-            #pageOverlay,
-            #webgl {
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                top: 0;
-                left: 0;
-                display: block;
-            }
-            #pageOverlay {
-                border: 0 none;
-                display: none;
-                z-index: 10000;
-            }
-            #exitSign {
-                background: black;
-                font-weight: bold;
-                color: #fff;
-                box-shadow: 0px 0px 5px 5px #00DD00;
-                text-shadow: 2.5px 2.5px 5px #999;
-                cursor: pointer;
-                display: none;
-                border: solid 1px #00DD00;
-                border-radius: 1rem;
-                padding: 1rem;
-                position: absolute;
-                top: 2rem;
-                right: 2rem;
-                z-index: 10001;
-            }
-            #exitSign img {
-                max-width: min(80px, 10vw);
-                height: auto;
-            }
-            #exitSign:hover {
-                box-shadow: 0px 0px 7.5px 7.5px #00FF00;
-                border-color: #00FF00;
-            }
+
+        body {
+            background-color: #000;
+            margin: 0;
+            padding: 0;
+        }
+        #pageOverlay,
+        #webgl {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: block;
+        }
+        #pageOverlay {
+            border: 0 none;
+            display: none;
+            z-index: 10000;
+        }
+        #exitSign {
+            background: black;
+            font-weight: bold;
+            color: #fff;
+            box-shadow: 0px 0px 5px 5px #00DD00;
+            text-shadow: 2.5px 2.5px 5px #999;
+            cursor: pointer;
+            display: none;
+            border: solid 1px #00DD00;
+            border-radius: 1rem;
+            padding: 1rem;
+            position: absolute;
+            top: 2rem;
+            right: 2rem;
+            z-index: 10001;
+        }
+        #exitSign img {
+            max-width: min(80px, 10vw);
+            height: auto;
+        }
+        #exitSign:hover {
+            box-shadow: 0px 0px 7.5px 7.5px #00FF00;
+            border-color: #00FF00;
+        }
     script(type='importmap').
         {
             "imports": {
